fix key sizing & handle wrapping. Add temp styling to Audio el in the game component

--- a/src/components/Game/styles.css
+++ b/src/components/Game/styles.css
@@ -4,13 +4,14 @@
     width: 100%;
 }
 
-.keys {
+.game-keys {
     display: flex;
     flex-direction: row;
     flex: 1;
     width: 100%;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
   }
 
   .audioPlayer {
