--- a/src/components/Key/styles.css
+++ b/src/components/Key/styles.css
@@ -5,21 +5,21 @@
     font-size: 1.5rem;
     padding: 1rem .5rem;
     transition: all .07s ease;
-    width: 10rem;
+    width: 5.5rem;
     text-align: center;
     color: white;
     background: rgba(0,0,0,0.4);
     text-shadow: 0 0 .5rem black;
   }
   
-  .sound {
+  .key-soundname {
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
     color: #ffc600;
   }
 
-  .kbd {
+  .key-letter {
     display: block;
     font-size: 4rem;
   }
